Bot Libre 6.1
Update AI Engine to Bot Libre 6.1.
Many enhancements including:
- Micro AI Memory
- Skype
- Kik
- WeChat
- WolframAlpha
- Timers
- Sentiment
- Many fixes, and enhancements